better fearless export